test_suite/alan-2022-examples/failing/001380_mutation.alan
source K950 begin call O(call J()) end
